<resources>
    <string name="app_name">EBM Stats Calc</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="mainScreenAlertTitle">Welcome</string>
    <string name="mainScreenAlertMessage">EBM Stats Calc helps clinicians and educators do clinical reasoning a little bit easier and more effectively
    by helping you \'do the math\' that everyone hates. The app will (1) calculate NNT\'s from event rates, (2) calculate Post-test Probability from Sensitivity,
    Specificity, LR+ and LR-, and (3) demonstrate diagnostic principles to learners dynamically.</string>
    <string name="mainScreenAlertBtnName">Get Started</string>
    <string name="title_home">Home</string>
    <string name="title_disclaimer">Disclaimer</string>
    <string name="title_aboutApp">About App</string>
    <string name="title_ref">References</string>
    <string name="title_moreApps">More Apps</string>
    <string name="actionbar_HomeScreen">EBM Stats Calculators</string>
    <string name="actionbar_DisclaimerScreen">Disclaimer</string>
    <string name="actionbar_AboutAppScreen">Development of EBM Stats Calc App</string>
    <string name="actionbar_ReferencesScreen">References and Internet Links</string>
    <string name="actionbar_MoreAppScreen">More Apps for Clinicians</string>
    <string name="actionbar_NNTScreen">Number Needed to Treat</string>
    <string name="actionbar_MoreInfoNNT">about NNT</string>
    <string name="actionbar_PostTestScreens">Diagnosis</string>
    <string name="actionbar_MoreInfoPostTest">about Diagnosis</string>
    <string name="dashboard_name">Joshua Steinberg MD</string>
    <string name="dashboard_email">jds.pocapps@gmail.com</string>
    <string name="home_screen_heading">Choose a calculator you wish to use</string>
    <string name="home_screen_button1">NNT from Rates or Events</string>
    <string name="home_screen_button2">Post-test Prob via Sens &amp; Spec</string>
    <string name="home_screen_button3">Post-test Prob via Likelihood Ratios</string>
    <string name="home_screen_belowButton1">Supply rates or raw events and patients</string>
    <string name="home_screen_belowButton2">Supply pre-test probability, Sens, Spec</string>
    <string name="home_screen_belowButton3">Supply pre-test probability, LR+, LR-</string>
    <string name="disclaimerScreen_text">Dear Colleague,
        \n\nI have two general purposes for offering these calculators. First is to help you think a bit more quantitatively about the
         medical care that you provide.
        Second is to help you illustrate points more effectively to students and residents about quantitative matters such as \"just how impactful is
        this treatment\" via NNT or \"just how certain of this diagnosis are we\" with posttest probabilities.
        \n\nThe authors of the app have tried to faithfully present calculators and explanations while not substituting our own judgment.
        If you think we have erred in presentation or explanation, please let us know!
        \n\nThis app is no substitute for knowledge and experience doing the quantitative reasoning of diagnosis and treatment in patient care.
        The app does not make medical decisions for you on diagnosis or treatment, it just helps you think quantitatively, helping you with the math.
        The app is merely a quick reference and tool for material you already know.</string>
    <string name="aboutAppScreen_text">Written to put basic yet dynamic tools for quantitative reasoning in diagnosis and treatment in the hands of clinicians,
        students, residents, and especially educators at the point of care.
        \n\nCONTENT:  Joshua Steinberg MD, UHS Wilson Family Medicine Residency, Binghamton NY, and Daniel Kaufman MS-3,
        SUNY Upstate Medical University, Binghamton Clinical Campus.
        \n\nDESIGN:  Joshua Steinberg MD (all me, no one else to blame).
        \n\nPROGRAMMING: Harshad Loya, MS Computer Science, Binghamton University, SUNY.
        \n\nVersion: 1.1    Build 1
        \n\nCopyright: June, 2018
        \n\nFeedback: jds.pocapps@gmail.com</string>
    <string name="refScreen_text">
        \n<a href="https://books.google.com/books/about/Evidence_based_Medicine.html?id=oIJrAAAAMAAJ">Evidence-Based Medicine, How to Practice
            and Teach EBM, 2nd Ed. Sackett DL, et. al., Churchhill Livingstone, Edinburgh, 2000.</a>
        \n\n\n<a href="http://www.cebm.net/blog/2014/02/03/likelihood-ratios/">Center for Evidence Based Medicine, Oxford University,
         Likelihood Ratios discussion, accessed Jan. 2, 2018.</a>
        \n\n\n<a href="http://www.thennt.com/home-lr/">Examples of Likelihood Ratios (LR+ and LR-) from across the breadth of medicine at www.TheNNT.com
         (and they have plenty of NNT\'s too).</a>
    </string>
    <string name="moreAppsScreen_title">"by Joshua Steinberg MD"</string>
    <string name="moreAppsScreen_text">"I keep a list of apps* written by anyone (mostly others) which I recommend for clinicians, nurses, residents, and students serving many fields of medicine, especially my home of full-spectrum family medicine. A copy is always online here."</string>
    <string name="moreAppsScreen_button">"More Apps List"</string>
    <string name="moreAppsScreen_button2">"My Other Play Store Apps"</string>
    <string name="moreAppsScreen_text2">"* I have no financial relationship or financial benefit from any of these apps, even my own."</string>
    <string name="SensSpecCalcScreen_PopuVal1">100</string>
    <string name="SensSpecCalcScreen_PopuVal2">1,000</string>
    <string name="SensSpecCalcScreen_PopuVal3">10,000</string>
    <string name="SensSpecCalcScreen_Lbl1">Population</string>
    <string name="SensSpecCalcScreen_Lbl2">Pre-test Probability as %</string>
    <string name="SensSpecCalcScreen_Lbl3">Sensitivity as %</string>
    <string name="SensSpecCalcScreen_Lbl4">Specificity as %</string>
    <string name="SensSpecCalcScreen_Lbl5">Disease</string>
    <string name="SensSpecCalcScreen_Lbl6">Pos</string>
    <string name="SensSpecCalcScreen_Lbl7">Neg</string>
    <string name="SensSpecCalcScreen_Lbl8">Test Pos</string>
    <string name="SensSpecCalcScreen_Lbl9">Test Neg</string>
    <string name="SensSpecCalcScreen_Lbl10">Pos Predictive Value as %</string>
    <string name="SensSpecCalcScreen_Lbl11">Neg Predictive Value as %</string>
    <string name="SensSpecCalcScreen_Lbl12">Post-test Probability</string>
    <string name="DefaultValue_0.00">0.00</string>
    <string name="DefaultValue_0">0</string>
    <string name="DefaultValue_0percent">0%</string>
    <string name="DefaultValue_0.5">0.5</string>
    <string name="DefaultValue_1.00">1.00</string>
    <string name="DefaultValue_1.0">1.0</string>
    <string name="DefaultValue_2.0">2.0</string>
    <string name="DefaultValue_10">10</string>
    <string name="DefaultValue_10.0">10.0</string>
    <string name="DefaultValue_25percent">25%</string>
    <string name="DefaultValue_40.0">40.0</string>
    <string name="DefaultValue_50percent">50%</string>
    <string name="DefaultValue_75percent">75%</string>
    <string name="DefaultValue_90.0">90.0</string>
    <string name="DefaultValue_100">100</string>
    <string name="DefaultValue_100percent">100%</string>
    <string name="DefaultValue_TrueP">TrueP</string>
    <string name="DefaultValue_FalseP">FalseP</string>
    <string name="DefaultValue_TrueN">TrueN</string>
    <string name="DefaultValue_FalseN">FalseN</string>
    <string name="DefaultValue_TestP">TestP</string>
    <string name="DefaultValue_TestN">TestN</string>
    <string name="DefaultValue_DzP">DzP</string>
    <string name="DefaultValue_DzN">DzN</string>
    <string name="DefaultValue_Total">Total</string>
    <string name="DefaultValue_PPV">PPV</string>
    <string name="DefaultValue_NPV">NPV</string>
    <string name="DefaultValue_Prob">prob</string>
    <string name="nnt_preference_file_key">EBMStatsCalc_NNT_SharedPreferences</string>
    <string name="sensspec_preference_file_key">EBMStatsCalc_SensSpec_SharedPreferences</string>
    <string name="likelihood_preference_file_key">EBMStatsCalc_Likelihood_SharedPreferences</string>
    <string name="moreInfoButton">ⓘ more info</string>
    <string name="LikelihoodScreen_Lbl2">Likelihood Ratio POS</string>
    <string name="LikelihoodScreen_Lbl3">Likelihood Ratio NEG</string>
    <string name="LikelihoodScreen_Lbl4">Post-test Probability as %</string>
    <string name="LikelihoodScreen_Lbl5">Test Positive</string>
    <string name="LikelihoodScreen_Lbl6">Test Negative</string>
    <string name="nntScreen_label1">Two Rates</string>
    <string name="nntScreen_label2">enter two rates between 0.00 and 1.00</string>
    <string name="nntScreen_label3">Rate1</string>
    <string name="nntScreen_label4">Rate2</string>
    <string name="nntScreen_label6">Two Percentages</string>
    <string name="nntScreen_label7">enter two percentages between 0 and 100</string>
    <string name="nntScreen_label8">%age1</string>
    <string name="nntScreen_label9">%age2</string>
    <string name="nntScreen_label11">Numbers of events and patients</string>
    <string name="nntScreen_label12">enter event totals and patient totals</string>
    <string name="nntScreen_label13">Events1</string>
    <string name="nntScreen_label14">Events2</string>
    <string name="nntScreen_label16">Patients1</string>
    <string name="nntScreen_label17">Patients2</string>
    <string name="nntScreen_eqLabel1">NNT = 1 / (</string>
    <string name="nntScreen_eqLabel2">-</string>
    <string name="nntScreen_eqLabel3">) = </string>
    <string name="nntScreen_eqLabel4">-----</string>
    <string name="nntScreen_commonLabel">NNT</string>
    <string name="nnt_moreInfo_text">Number Needed to Treat (NNT) is a way of quantifying the effectiveness of a given intervention.
        A study comparing Treatment A to Treatment B might show A statistically significantly superior via a p-value or a 95% confidence interval.
        But is the statistically significantly superior treatment also clinically significantly superior?  NNT is a great way to estimate the magnitude of
        benefit, and quantify how much better one approach is compared to an alternative.  NNT is how many patients must be treated with Treatment A
        rather than Treatment B (or placebo or no treatment at all) in order to change one patient\'s outcome.
        \n\nFor example, let\'s say a study reports on two randomized groups of 100 people each, one group taking a statin medication, the other taking placebo.
        \n\nOver perhaps 5 years of treatment, 10 patients in the placebo control group have a heart attack, yielding a risk in the control group is 10/100, or 10%.
        In the statin group, just 7 heart attacks occur, for an risk of 7/100, or 7%.  The statin didn\'t stop every heart attack as 7 still occurred.
        And most patients didn\'t benefit from the statin, as 90 had no heart attack regardless of treatment.
        But 3 outcomes were changed – 3 heart attacks were prevented by taking statin rather than placebo. It took 100 patients treated with
        statin rather than placebo to save these 3 heart attacks. So it took appx. 33 patients treated in order to save every 1 heart attack. \nNNT of 33.
        \n\nThe formula for NNT is the inverse of the absolute risk reduction, or...
        \n\nNNT = 1 ÷ (Risk1 – Risk2)
        \n\nNNT can be used to quantify the magnitude of benefit for any intervention, including standard things like a medication or surgery, and also for
        entire intervention programs like a screening program.</string>
</resources>