<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlueColor"
    tools:context=".HomeScreen">

    <TextView
        android:id="@+id/homeScreen_heading"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="14dp"
        android:text="@string/home_screen_heading"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/homeScreen_button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/homeScreen_guideline2"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/homeScreen_button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:text="@string/home_screen_button1"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/homeScreen_textView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/homeScreen_heading"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/homeScreen_textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="16dp"
        android:text="@string/home_screen_belowButton1"
        android:textAlignment="center"
        android:textSize="14sp"
        android:includeFontPadding="false"
        app:layout_constraintBottom_toTopOf="@id/homeScreen_button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/homeScreen_button1"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <Button
        android:id="@+id/homeScreen_button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:text="@string/home_screen_button2"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/homeScreen_textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/homeScreen_textView1"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/homeScreen_textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="16dp"
        android:text="@string/home_screen_belowButton2"
        android:textAlignment="center"
        android:textSize="14sp"
        android:includeFontPadding="false"
        app:layout_constraintBottom_toTopOf="@id/homeScreen_button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/homeScreen_button2"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <Button
        android:id="@+id/homeScreen_button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:text="@string/home_screen_button3"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/homeScreen_textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/homeScreen_textView2"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/homeScreen_textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:text="@string/home_screen_belowButton3"
        android:textAlignment="center"
        android:textSize="14sp"
        android:includeFontPadding="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/homeScreen_button3"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <android.support.constraint.Guideline
        android:id="@+id/homeScreen_guideline"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="190dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_end="190dp"
        app:layout_constraintStart_toStartOf="@id/homeScreen_textView3"
        app:layout_constraintTop_toBottomOf="@id/homeScreen_textView3" />

    <android.support.constraint.Guideline
        android:id="@+id/homeScreen_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/homeScreen_heading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_end="510dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>